<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="my.edu.tarc.demonavi.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_settingsFragment"
            app:destination="@id/settingsFragment"
            app:popUpTo="@id/nav_home" />
        <action
            android:id="@+id/action_nav_home_to_sampleFragment"
            app:destination="@id/sampleFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="my.edu.tarc.demonavi.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="my.edu.tarc.demonavi.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_profile"
        android:name="my.edu.tarc.demonavi.ui.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/settingsFragment"
        android:name="my.edu.tarc.demonavi.ui.settings.SettingsFragment"
        android:label="@string/action_settings"
        tools:layout="@layout/fragment_settings" />
    <fragment
        android:id="@+id/sampleFragment"
        android:name="my.edu.tarc.demonavi.SampleFragment"
        android:label="Sample"
        tools:layout="@layout/fragment_sample" />
</navigation>